# neodigit-dyndns

./: .gitignore  README.md  pyproject.toml  requirements.txt
neodigit_dyndns/: __main__.py  dyndns.py
tests/: test_neodigit_dyndns.py
