[tool.poetry]
name = "neodigit-dyndns"
version = "0.3.0"
description = "A dynamic DNS client using Neodigit's API"
authors = ["Eduardo Collado <edu@tecnocratica.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
